# enterprise-rag-lab

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
data/evaluation/: fastapi_retrieval_v1.json
data/evaluation/reports/: fastapi_retrieval_v1_bm25_top5.json  fastapi_retrieval_v1_rrf-context_top5.json  fastapi_retrieval_v1_rrf_top5.json  fastapi_retrieval_v1_vector_top5.json
data/evaluation/reviews/: fastapi_retrieval_v1_001-005.md  fastapi_retrieval_v1_006-010.md  fastapi_retrieval_v1_011-015.md  fastapi_retrieval_v1_016-020.md  fastapi_retrieval_v1_021-025.md  fastapi_retrieval_v1_026-030.md
data/fixtures/docx/: api-service-deployment-runbook.docx  cors-incident-postmortem-noisy.docx
docs/: DATASET.md  DEVELOPMENT_PLAN.md  ENGINEERING_REVIEW.md
scripts/: generate_docx_fixtures.py
src/enterprise_rag_lab/: __init__.py  __main__.py  cli.py  models.py  pipeline.py
src/enterprise_rag_lab/chunking/: __init__.py  chunker.py  service.py
src/enterprise_rag_lab/cleaning/: __init__.py  cleaner.py  service.py
src/enterprise_rag_lab/demo/: __init__.py  __main__.py  app.py
src/enterprise_rag_lab/evaluation/: __init__.py  retrieval.py
src/enterprise_rag_lab/ingestion/: __init__.py  service.py  store.py
tests/: test_chunking.py  test_cleaning.py  test_cli_output.py  test_context_expansion.py  test_demo.py  test_embeddings.py  test_hybrid_retrieval.py  test_ingestion.py  test_keyword_retrieval.py  test_package.py  test_parsers.py  test_pipeline.py  test_retrieval_evaluation.py  test_vector_retrieval.py
(+18 files in other folders)
